Implemented TagFilterEditDialog to also let enter key execute the action

--- a/HitomiScrollViewerWebApp/wwwroot/index.html
+++ b/HitomiScrollViewerWebApp/wwwroot/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
 
-<body>
+<body tabindex="-1">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
