--- a/HitomiScrollViewerWebApp/wwwroot/index.html
+++ b/HitomiScrollViewerWebApp/wwwroot/index.html
@@ -34,6 +34,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/utils.js"></script>
 </body>
 
 </html>
